Fixed dark mode issues (#521)
* Update shijin4.css

Update copyright date
Made text colour black for the Installation Guide steps so the text is visible in dark mode.

* Fixed dark mode issues

Fixed issues in dark mode on the installation guide and the Get Haiku! page.

* Fix port status page dark mode issues

Fixed port status page dark mode display issues, plus added table hover effects.

* Update installation-guide.html

Restore key spans as suggested by @humdingerb

* Update content/get-haiku/installation-guide.html

--- a/themes/shijin4/static/css/shijin4.css
+++ b/themes/shijin4/static/css/shijin4.css
@@ -7,7 +7,7 @@
  **************************************************************
  *********** THE BOOTSTRAP THEME BASED ON "SHIJIN 3" **********
  **************************************************************
- ** Copyright 2015-2018 Augustin Cavalier <waddlesplash>
+ ** Copyright 2015-2021 Augustin Cavalier <waddlesplash>
  ** Colors & some basic styles copied from Shijin 3's "local.css"
  ** Released as MIT license; copyright assigned to Haiku, Inc.
  */
@@ -674,7 +674,6 @@ footer a, footer span.glyphicon {
 		color: #DDDFFF;
 	}
 	div.node table th {
-		color: #CCC;
 		background-color: #333;
 	}
 	div.node h2 {
@@ -764,14 +763,14 @@ footer a, footer span.glyphicon {
 		border-width: 1px;
 		padding: 3px 2px 0px 2px;
 		background-color: #444;
-		font-family: serif;
+		font-family: 'Noto Sans', sans-serif;
 		font-variant: small-caps;
 		font-size: 0.8em;
 	}
 	.menu {
 		/* Menu */
 		font-size: 1em;
-		font-family: serif;
+		font-family: 'Noto Sans', sans-serif;;
 		font-style: italic;
 		color: #7f7cd0;
 	}
@@ -782,5 +781,19 @@ footer a, footer span.glyphicon {
 		font-family: monospace;
 		padding: 2px;
 		border-radius: 3px;
+	}
+	.step, .caption, {
+		color: black;
+	}
+	.link:hover {
+		background-color:#444;
+		color:white;
+	}
+	.port {
+		color:black;
+	}
+	.platform:hover {
+		background-color:#444;
+		color:white;
 	}
 }
